<resources>
    <string name="app_name">CENG Online</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="surname">Surname</string>
    <string name="register">Register</string>
    <string name="login">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="courseName">Course Name</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="announcement_title">Announcement Title</string>
    <string name="to">to:</string>
    <string name="email_address">email address</string>
    <string name="message_text">Message Text</string>
    <string name="email_address2">Email Address</string>
    <string name="create_announcement">Create Announcement</string>
    <string name="message">Message</string>
    <string name="_20_10_2020">20-10-2020</string>
    <string name="date">Date:</string>
    <string name="create_assignment">Create Assignment</string>
    <string name="assignment_title">Assignment Title</string>
    <string name="course_id">Course ID</string>
    <string name="add_assignment">ADD ASSIGNMENT</string>
    <string name="put_your_assignment_here">Put your assignment here.</string>

</resources>
