<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="132dp"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/app_name_size" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/name"
            android:nextFocusDown="@id/surnameText"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint" />

        <EditText
            android:id="@+id/surnameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/surname"
            android:nextFocusDown="@id/emailText"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint" />


        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/passwordText"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint" />


        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint" />


        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_register"
            android:onClick="registerClicked"
            android:text="@string/register"
            android:textColor="@color/colorText" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>