<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Message.MessageActivity"
    tools:openDrawer="left"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            app:title="Messages"
            android:id="@+id/toolbarFeed"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <RelativeLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/to"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold"

                />

            <EditText
                android:id="@+id/sentTo"
                android:layout_width="290dp"
                android:layout_height="wrap_content"

                android:layout_marginRight="4dp"
                android:layout_toLeftOf="@+id/messageSendImage"
                android:layout_toEndOf="@+id/to"
                android:hint="@string/email_address2" />

            <EditText
                android:id="@+id/messageText"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/to"
                android:layout_marginRight="0dp"
                android:layout_toLeftOf="@+id/messageSendImage"
                android:layout_toEndOf="@+id/to"
                android:hint="@string/message_text" />

            <ImageView
                android:id="@+id/messageSendImage"
                android:layout_marginTop="15dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:onClick="sendMessage"
                android:src="@drawable/ic_send_black_24dp" />

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/recyclerViewMessage"
                android:layout_width="match_parent"
                android:layout_below="@+id/messageText"
                android:layout_height="485dp" />
        </RelativeLayout>


    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:headerLayout="@layout/nav_hearder"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>